--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@docusaurus/core": "^2.1.0",
     "@docusaurus/preset-classic": "^2.1.0",
+    "@giscus/react": "^2.2.0",
     "@mdx-js/react": "^1.6.22",
     "prism-react-renderer": "^1.3.5",
     "react": "^17.0.2",
