--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,6 +11,8 @@ jobs:
     
     steps:
       - uses: actions/checkout@v3
+      - name: Enable Corepack before setting up Node
+        run: corepack enable
       - uses: actions/setup-node@v4
         with:
           node-version: 16
@@ -22,9 +24,9 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ secrets.AWS_REGION }}
 
-      - run: corepack yarn install --immutable
-      - run: corepack yarn build
-      - run: corepack yarn deploy
+      - run: yarn install --immutable
+      - run: yarn build
+      - run: yarn deploy
         env:
           AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET }}
           AWS_INVALIDATE_DISTRIBUTION_ID: ${{ secrets.AWS_INVALIDATE_DISTRIBUTION_ID }}
