--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,6 +24,10 @@ jobs:
           aws-region: ${{ secrets.AWS_REGION }}
 
       - run: yarn install --immutable
+
+      - name: Setup tmate session
+        uses: mxschmitt/action-tmate@v3
+
       - run: yarn build
       - run: yarn deploy
         env:
