add knowledge base
and update index

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,6 +24,7 @@ jobs:
           aws-region: ${{ secrets.AWS_REGION }}
 
       - run: yarn install --immutable
+      - run: yarn tsc
       - run: yarn build
       - run: yarn deploy
         env:
