--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "^3.5.2",
+    "@docusaurus/plugin-content-docs": "^3.5.2",
     "@docusaurus/tsconfig": "^3.5.2",
     "@tsconfig/strictest": "^2.0.5",
     "tsx": "^4.19.0",
