--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@docusaurus/preset-classic": "^3.5.2",
     "@giscus/react": "^2.2.0",
     "@mdx-js/react": "^3.0.1",
+    "lodash": "^4.17.21",
+    "luxon": "^3.5.0",
     "prism-react-renderer": "^1.3.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -30,6 +32,8 @@
     "@docusaurus/plugin-content-docs": "^3.5.2",
     "@docusaurus/tsconfig": "^3.5.2",
     "@tsconfig/strictest": "^2.0.5",
+    "@types/lodash": "^4",
+    "@types/luxon": "^3",
     "tsx": "^4.19.0",
     "typescript": "^5.5.4"
   },
