--- a/package.json
+++ b/package.json
@@ -17,32 +17,35 @@
     "make-blogpost": "tsx makeBlogpost.mts"
   },
   "dependencies": {
-    "@docusaurus/core": "^3.6.1",
-    "@docusaurus/preset-classic": "^3.6.1",
+    "@docusaurus/core": "^3.8.1",
+    "@docusaurus/preset-classic": "^3.8.1",
     "@giscus/react": "^2.2.0",
-    "@mdx-js/react": "^3.0.1",
+    "@mdx-js/react": "^3.1.0",
     "csv-parse": "^5.5.6",
     "flag-icons": "^7.2.3",
     "ky": "^1.7.2",
     "lodash": "^4.17.21",
     "luxon": "^3.5.0",
-    "prism-react-renderer": "^1.3.5",
+    "prism-react-renderer": "^2.4.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-icons": "^4.4.0",
+    "react-icons": "^5.5.0",
     "swr": "^2.2.5",
     "tiny-invariant": "^1.3.3",
     "use-debounce": "^10.0.4",
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@docusaurus/module-type-aliases": "^3.6.1",
+    "@docusaurus/module-type-aliases": "^3.8.1",
     "@docusaurus/plugin-content-docs": "^3.6.1",
     "@docusaurus/tsconfig": "^3.6.1",
     "@tsconfig/strictest": "^2.0.5",
     "@types/eslint-plugin-jsx-a11y": "^6",
     "@types/lodash": "^4",
     "@types/luxon": "^3",
+    "@types/react": "18",
+    "@types/react-dom": "18",
+    "@types/webfontloader": "^1.6.38",
     "@typescript-eslint/eslint-plugin": "^6.12.0",
     "@typescript-eslint/parser": "^6.12.0",
     "eslint": "^8.2.0",
@@ -53,7 +56,7 @@
     "eslint-plugin-react-hooks": "^4.3.0",
     "eslint-plugin-unicorn": "^51.0.1",
     "tsx": "^4.19.0",
-    "typescript": "~5.3.0"
+    "typescript": "^5.8.3"
   },
   "browserslist": {
     "production": [
